feat: update openapi
