# api/openapi/v1/server.pb.go
@@ -36,7 +36,7 @@ var file_api_openapi_v1_server_proto_rawDesc = []byte{
 	0x75, 0x66, 0x2f, 0x65, 0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x2e,
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x63, 0x2d, 0x67, 0x65, 0x6e, 0x2d, 0x6f, 0x70, 0x65, 0x6e, 0x61,
 	0x70, 0x69, 0x76, 0x32, 0x2f, 0x6f, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e,
-	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x93,
+	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xa7,
 	0x06, 0x0a, 0x07, 0x4f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x12, 0x88, 0x01, 0x0a, 0x08, 0x49,
 	0x64, 0x65, 0x6e, 0x74, 0x69, 0x66, 0x79, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
 	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a,
@@ -57,66 +57,67 @@ var file_api_openapi_v1_server_proto_rawDesc = []byte{
 	0x07, 0x4f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x12, 0x17, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70,
 	0x69, 0x20, 0x61, 0x64, 0x64, 0x6f, 0x6e, 0x73, 0x20, 0x69, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x66,
 	0x79, 0x2a, 0x08, 0x49, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x66, 0x79, 0x4a, 0x0b, 0x0a, 0x03, 0x32,
-	0x30, 0x30, 0x12, 0x04, 0x0a, 0x02, 0x4f, 0x4b, 0x12, 0x9d, 0x01, 0x0a, 0x0a, 0x54, 0x65, 0x6e,
-	0x61, 0x6e, 0x74, 0x42, 0x69, 0x6e, 0x64, 0x12, 0x1c, 0x2e, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70,
-	0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x42, 0x69, 0x6e, 0x64, 0x52,
-	0x65, 0x71, 0x75, 0x73, 0x74, 0x1a, 0x1e, 0x2e, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x2e,
-	0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x42, 0x69, 0x6e, 0x64, 0x52, 0x65, 0x73,
-	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x51, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11, 0x22, 0x0c, 0x2f,
-	0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x2f, 0x62, 0x69, 0x6e, 0x64, 0x3a, 0x01, 0x2a, 0x92, 0x41,
-	0x37, 0x0a, 0x07, 0x4f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x12, 0x13, 0x6f, 0x70, 0x65, 0x6e,
-	0x61, 0x70, 0x69, 0x20, 0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x20, 0x62, 0x69, 0x6e, 0x64, 0x2a,
-	0x0a, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x42, 0x69, 0x6e, 0x64, 0x4a, 0x0b, 0x0a, 0x03, 0x32,
-	0x30, 0x30, 0x12, 0x04, 0x0a, 0x02, 0x4f, 0x4b, 0x12, 0xa9, 0x01, 0x0a, 0x0c, 0x54, 0x65, 0x6e,
-	0x61, 0x6e, 0x74, 0x55, 0x6e, 0x62, 0x69, 0x6e, 0x64, 0x12, 0x1e, 0x2e, 0x6f, 0x70, 0x65, 0x6e,
-	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x55, 0x6e, 0x62,
-	0x69, 0x6e, 0x64, 0x52, 0x65, 0x71, 0x75, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x6f, 0x70, 0x65, 0x6e,
-	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x55, 0x6e, 0x62,
-	0x69, 0x6e, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x57, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x13, 0x22, 0x0e, 0x2f, 0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x2f, 0x75, 0x6e, 0x62,
-	0x69, 0x6e, 0x64, 0x3a, 0x01, 0x2a, 0x92, 0x41, 0x3b, 0x0a, 0x07, 0x4f, 0x70, 0x65, 0x6e, 0x61,
-	0x70, 0x69, 0x12, 0x15, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x20, 0x74, 0x65, 0x6e, 0x61,
-	0x6e, 0x74, 0x20, 0x75, 0x6e, 0x62, 0x69, 0x6e, 0x64, 0x2a, 0x0c, 0x54, 0x65, 0x6e, 0x61, 0x6e,
-	0x74, 0x55, 0x6e, 0x62, 0x69, 0x6e, 0x64, 0x4a, 0x0b, 0x0a, 0x03, 0x32, 0x30, 0x30, 0x12, 0x04,
-	0x0a, 0x02, 0x4f, 0x4b, 0x12, 0x7e, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x16,
-	0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66,
-	0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1a, 0x2e, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69,
-	0x2e, 0x76, 0x31, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x22, 0x40, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x09, 0x12, 0x07, 0x2f, 0x73, 0x74, 0x61,
-	0x74, 0x75, 0x73, 0x92, 0x41, 0x2e, 0x0a, 0x07, 0x4f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x12,
-	0x0e, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x20, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x2a,
-	0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x4a, 0x0b, 0x0a, 0x03, 0x32, 0x30, 0x30, 0x12, 0x04,
-	0x0a, 0x02, 0x4f, 0x4b, 0x42, 0x6b, 0x0a, 0x1e, 0x64, 0x65, 0x76, 0x2e, 0x74, 0x6b, 0x65, 0x65,
-	0x6c, 0x2e, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6f, 0x70, 0x65, 0x6e,
-	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x42, 0x0e, 0x4f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x50,
-	0x72, 0x6f, 0x74, 0x6f, 0x56, 0x31, 0x50, 0x01, 0x5a, 0x37, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6b, 0x65, 0x65, 0x6c, 0x2d, 0x69, 0x6f, 0x2f, 0x74, 0x6b,
-	0x65, 0x65, 0x6c, 0x2d, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x2d, 0x67, 0x6f, 0x2f,
-	0x61, 0x70, 0x69, 0x2f, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x3b, 0x76,
-	0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x30, 0x30, 0x12, 0x04, 0x0a, 0x02, 0x4f, 0x4b, 0x12, 0xaa, 0x01, 0x0a, 0x0c, 0x54, 0x65, 0x6e,
+	0x61, 0x6e, 0x74, 0x45, 0x6e, 0x61, 0x62, 0x6c, 0x65, 0x12, 0x1f, 0x2e, 0x6f, 0x70, 0x65, 0x6e,
+	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x45, 0x6e, 0x61,
+	0x62, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x6f, 0x70, 0x65,
+	0x6e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x45, 0x6e,
+	0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x57, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x13, 0x22, 0x0e, 0x2f, 0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x2f, 0x65, 0x6e,
+	0x61, 0x62, 0x6c, 0x65, 0x3a, 0x01, 0x2a, 0x92, 0x41, 0x3b, 0x0a, 0x07, 0x4f, 0x70, 0x65, 0x6e,
+	0x61, 0x70, 0x69, 0x12, 0x15, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x20, 0x74, 0x65, 0x6e,
+	0x61, 0x6e, 0x74, 0x20, 0x65, 0x6e, 0x61, 0x62, 0x6c, 0x65, 0x2a, 0x0c, 0x54, 0x65, 0x6e, 0x61,
+	0x6e, 0x74, 0x45, 0x6e, 0x61, 0x62, 0x6c, 0x65, 0x4a, 0x0b, 0x0a, 0x03, 0x32, 0x30, 0x30, 0x12,
+	0x04, 0x0a, 0x02, 0x4f, 0x4b, 0x12, 0xb0, 0x01, 0x0a, 0x0d, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74,
+	0x44, 0x69, 0x73, 0x61, 0x62, 0x6c, 0x65, 0x12, 0x20, 0x2e, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70,
+	0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x44, 0x69, 0x73, 0x61, 0x62,
+	0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x6f, 0x70, 0x65, 0x6e,
+	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x44, 0x69, 0x73,
+	0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x5a, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x14, 0x22, 0x0f, 0x2f, 0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x2f, 0x64, 0x69,
+	0x73, 0x61, 0x62, 0x6c, 0x65, 0x3a, 0x01, 0x2a, 0x92, 0x41, 0x3d, 0x0a, 0x07, 0x4f, 0x70, 0x65,
+	0x6e, 0x61, 0x70, 0x69, 0x12, 0x16, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x20, 0x74, 0x65,
+	0x6e, 0x61, 0x6e, 0x74, 0x20, 0x64, 0x69, 0x73, 0x61, 0x62, 0x6c, 0x65, 0x2a, 0x0d, 0x54, 0x65,
+	0x6e, 0x61, 0x6e, 0x74, 0x44, 0x69, 0x73, 0x61, 0x62, 0x6c, 0x65, 0x4a, 0x0b, 0x0a, 0x03, 0x32,
+	0x30, 0x30, 0x12, 0x04, 0x0a, 0x02, 0x4f, 0x4b, 0x12, 0x7e, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74,
+	0x75, 0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1a, 0x2e, 0x6f, 0x70, 0x65,
+	0x6e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x40, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x09, 0x12, 0x07,
+	0x2f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x92, 0x41, 0x2e, 0x0a, 0x07, 0x4f, 0x70, 0x65, 0x6e,
+	0x61, 0x70, 0x69, 0x12, 0x0e, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x20, 0x73, 0x74, 0x61,
+	0x74, 0x75, 0x73, 0x2a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x4a, 0x0b, 0x0a, 0x03, 0x32,
+	0x30, 0x30, 0x12, 0x04, 0x0a, 0x02, 0x4f, 0x4b, 0x42, 0x6b, 0x0a, 0x1e, 0x64, 0x65, 0x76, 0x2e,
+	0x74, 0x6b, 0x65, 0x65, 0x6c, 0x2e, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x42, 0x0e, 0x4f, 0x70, 0x65, 0x6e,
+	0x61, 0x70, 0x69, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x56, 0x31, 0x50, 0x01, 0x5a, 0x37, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6b, 0x65, 0x65, 0x6c, 0x2d, 0x69,
+	0x6f, 0x2f, 0x74, 0x6b, 0x65, 0x65, 0x6c, 0x2d, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65,
+	0x2d, 0x67, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x2f,
+	0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_api_openapi_v1_server_proto_goTypes = []interface{}{
 	(*emptypb.Empty)(nil),             // 0: google.protobuf.Empty
 	(*v1.AddonsIdentifyRequest)(nil),  // 1: openapi.v1.AddonsIdentifyRequest
-	(*v1.TenantBindRequst)(nil),       // 2: openapi.v1.TenantBindRequst
-	(*v1.TenantUnbindRequst)(nil),     // 3: openapi.v1.TenantUnbindRequst
+	(*v1.TenantEnableRequest)(nil),    // 2: openapi.v1.TenantEnableRequest
+	(*v1.TenantDisableRequest)(nil),   // 3: openapi.v1.TenantDisableRequest
 	(*v1.IdentifyResponse)(nil),       // 4: openapi.v1.IdentifyResponse
 	(*v1.AddonsIdentifyResponse)(nil), // 5: openapi.v1.AddonsIdentifyResponse
-	(*v1.TenantBindResponse)(nil),     // 6: openapi.v1.TenantBindResponse
-	(*v1.TenantUnbindResponse)(nil),   // 7: openapi.v1.TenantUnbindResponse
+	(*v1.TenantEnableResponse)(nil),   // 6: openapi.v1.TenantEnableResponse
+	(*v1.TenantDisableResponse)(nil),  // 7: openapi.v1.TenantDisableResponse
 	(*v1.StatusResponse)(nil),         // 8: openapi.v1.StatusResponse
 }
 var file_api_openapi_v1_server_proto_depIdxs = []int32{
 	0, // 0: openapi.v1.Openapi.Identify:input_type -> google.protobuf.Empty
 	1, // 1: openapi.v1.Openapi.AddonsIdentify:input_type -> openapi.v1.AddonsIdentifyRequest
-	2, // 2: openapi.v1.Openapi.TenantBind:input_type -> openapi.v1.TenantBindRequst
-	3, // 3: openapi.v1.Openapi.TenantUnbind:input_type -> openapi.v1.TenantUnbindRequst
+	2, // 2: openapi.v1.Openapi.TenantEnable:input_type -> openapi.v1.TenantEnableRequest
+	3, // 3: openapi.v1.Openapi.TenantDisable:input_type -> openapi.v1.TenantDisableRequest
 	0, // 4: openapi.v1.Openapi.Status:input_type -> google.protobuf.Empty
 	4, // 5: openapi.v1.Openapi.Identify:output_type -> openapi.v1.IdentifyResponse
 	5, // 6: openapi.v1.Openapi.AddonsIdentify:output_type -> openapi.v1.AddonsIdentifyResponse
-	6, // 7: openapi.v1.Openapi.TenantBind:output_type -> openapi.v1.TenantBindResponse
-	7, // 8: openapi.v1.Openapi.TenantUnbind:output_type -> openapi.v1.TenantUnbindResponse
+	6, // 7: openapi.v1.Openapi.TenantEnable:output_type -> openapi.v1.TenantEnableResponse
+	7, // 8: openapi.v1.Openapi.TenantDisable:output_type -> openapi.v1.TenantDisableResponse
 	8, // 9: openapi.v1.Openapi.Status:output_type -> openapi.v1.StatusResponse
 	5, // [5:10] is the sub-list for method output_type
 	0, // [0:5] is the sub-list for method input_type
