# api/openapi/v1/server_http.pb.go
@@ -32,8 +32,8 @@ type OpenapiHTTPServer interface {
 	AddonsIdentify(context.Context, *v1.AddonsIdentifyRequest) (*v1.AddonsIdentifyResponse, error)
 	Identify(context.Context, *emptypb.Empty) (*v1.IdentifyResponse, error)
 	Status(context.Context, *emptypb.Empty) (*v1.StatusResponse, error)
-	TenantBind(context.Context, *v1.TenantBindRequst) (*v1.TenantBindResponse, error)
-	TenantUnbind(context.Context, *v1.TenantUnbindRequst) (*v1.TenantUnbindResponse, error)
+	TenantDisable(context.Context, *v1.TenantDisableRequest) (*v1.TenantDisableResponse, error)
+	TenantEnable(context.Context, *v1.TenantEnableRequest) (*v1.TenantEnableResponse, error)
 }
 
 type OpenapiHTTPHandler struct {
@@ -107,8 +107,8 @@ func (h *OpenapiHTTPHandler) Status(req *go_restful.Request, resp *go_restful.Re
 	resp.WriteHeaderAndJson(http.StatusOK, out, "application/json")
 }
 
-func (h *OpenapiHTTPHandler) TenantBind(req *go_restful.Request, resp *go_restful.Response) {
-	in := v1.TenantBindRequst{}
+func (h *OpenapiHTTPHandler) TenantDisable(req *go_restful.Request, resp *go_restful.Response) {
+	in := v1.TenantDisableRequest{}
 	if err := transportHTTP.GetBody(req, &in); err != nil {
 		resp.WriteHeaderAndJson(http.StatusBadRequest,
 			result.Set(http.StatusBadRequest, err.Error(), nil), "application/json")
@@ -117,7 +117,7 @@ func (h *OpenapiHTTPHandler) TenantBind(req *go_restful.Request, resp *go_restfu
 
 	ctx := transportHTTP.ContextWithHeader(req.Request.Context(), req.Request.Header)
 
-	out, err := h.srv.TenantBind(ctx, &in)
+	out, err := h.srv.TenantDisable(ctx, &in)
 	if err != nil {
 		tErr := errors.FromError(err)
 		httpCode := errors.GRPCToHTTPStatusCode(tErr.GRPCStatus().Code())
@@ -128,8 +128,8 @@ func (h *OpenapiHTTPHandler) TenantBind(req *go_restful.Request, resp *go_restfu
 	resp.WriteHeaderAndJson(http.StatusOK, out, "application/json")
 }
 
-func (h *OpenapiHTTPHandler) TenantUnbind(req *go_restful.Request, resp *go_restful.Response) {
-	in := v1.TenantUnbindRequst{}
+func (h *OpenapiHTTPHandler) TenantEnable(req *go_restful.Request, resp *go_restful.Response) {
+	in := v1.TenantEnableRequest{}
 	if err := transportHTTP.GetBody(req, &in); err != nil {
 		resp.WriteHeaderAndJson(http.StatusBadRequest,
 			result.Set(http.StatusBadRequest, err.Error(), nil), "application/json")
@@ -138,7 +138,7 @@ func (h *OpenapiHTTPHandler) TenantUnbind(req *go_restful.Request, resp *go_rest
 
 	ctx := transportHTTP.ContextWithHeader(req.Request.Context(), req.Request.Header)
 
-	out, err := h.srv.TenantUnbind(ctx, &in)
+	out, err := h.srv.TenantEnable(ctx, &in)
 	if err != nil {
 		tErr := errors.FromError(err)
 		httpCode := errors.GRPCToHTTPStatusCode(tErr.GRPCStatus().Code())
@@ -169,10 +169,10 @@ func RegisterOpenapiHTTPServer(container *go_restful.Container, srv OpenapiHTTPS
 		To(handler.Identify))
 	ws.Route(ws.POST("/addons/identify").
 		To(handler.AddonsIdentify))
-	ws.Route(ws.POST("/tenant/bind").
-		To(handler.TenantBind))
-	ws.Route(ws.POST("/tenant/unbind").
-		To(handler.TenantUnbind))
+	ws.Route(ws.POST("/tenant/enable").
+		To(handler.TenantEnable))
+	ws.Route(ws.POST("/tenant/disable").
+		To(handler.TenantDisable))
 	ws.Route(ws.GET("/status").
 		To(handler.Status))
 }
